(#4) fix : nav z-index 조정 (modal container와 겹침해소)

--- a/app/globals.scss
+++ b/app/globals.scss
@@ -186,7 +186,7 @@ main {
   justify-content: space-around;
   align-items: center;
   background-color: #fff;
-  z-index: 10;
+  z-index: 99;
   font-size: 16px;
 }
 
